kubernetes/flask.yml

apiVersion: v1
kind: Service
metadata:
  name: flaskold
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: flaskold
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: flask
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
        - path: /stats
          backend:
            serviceName: flask
            servicePort: 80
        - path: /static
          backend:
            serviceName: flask
            servicePort: 80
        - path: /
          backend:
            serviceName: flaskold
            servicePort: 80
